--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "engines": {
     "vscode": "^1.24.0"
   },
+  "author": {
+    "name": "Lokesh Rajendran"
+  },
   "categories": [
     "Themes"
   ],
