--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "aditi",
   "displayName": "Aditi - Dark theme",
-  "description": "Minimal purple theme",
-  "version": "0.4.0",
+  "description": "Minimal purplish bluish theme",
+  "version": "0.5.0",
   "publisher": "lokesh-coder",
   "engines": {
     "vscode": "^1.24.0"
